<resources>
    <string name="app_name">洗白白</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_watting">加载中..</string>
    <string name="main_txt_platenum">添加车辆</string>
    <string name="main_txt_now">即刻洗车</string>
    <string name="main_txt_reserve">预约上门</string>
    <string name="format_price">￥%1$s</string>
    <string name="nowvisit_format_time">%1$s\"</string>
    <string name="address_none">待添加</string>
    <string name="order_prefix_checked">· </string>
    <string name="order_finish">已完成</string>
    <string name="order_ing">进行中</string>
    <string name="toast_notfull">填写信息不完整</string>
    <string name="dia_positive">确定</string>
    <string name="dia_negative">取消</string>
    <string name="dialog_update">版本更新</string>
    <string name="dia_forceupdate">重大更新</string>
    <string name="dia_normalupdate">版本更新</string>
    <string name="dia_update">更新</string>
    <string name="dia_exit">退出</string>
    <string name="toast_downloading">后台下载中..</string>
    <string name="toast_noupdate">已是最新版本</string>
    <string name="toast_nullage">请输入年龄</string>
    <string name="toast_nullname">请输入昵称</string>
    <string name="coupons_price">已抵扣￥</string>
    <!--Eric-->
    <string name="place_order">下单</string>
    <!--侧滑菜单-->
    <string name="menu_to_login">点击登录</string>
    <string name="menu_my_order">我的订单</string>
    <string name="menu_regular_car">常用车辆</string>
    <string name="menu_regular_addr">常用地址</string>
    <string name="menu_my_ticket">我的礼券</string>
    <string name="menu_my_coupons">我的优惠券</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_contact">联系客服</string>
    <string name="menu_about">关于</string>

    <string name="DIYSub_submit">确认</string>
    <string name="DIYSub_totalPrice">合计：￥</string>
    <string name="beauty_title">美容项目</string>
    <string name="place_freewash">打蜡项目送外观清洗</string>
    <string name="place_provence">省</string>
    <string name="info_title">个人信息</string>
    <string name="info_man">男</string>
    <string name="info_femail">女</string>
    <string name="info_album">相册</string>
    <string name="info_take">拍照</string>
    <string name="info_change_head">更换头像</string>
    <string name="info_change_name">修改昵称</string>
    <string name="info_change_name_tip">请输入昵称</string>
    <!--选择优惠券-->
    <string name="ticket_money_unit">元</string>
    <string name="ticket_decline">有效期至</string>
    <string name="ticket_title">我的优惠券</string>
    <string name="ticket_rule">使用规则</string>

    <!--我的订单-->
    <string name="myorder_title">我的订单</string>
    <string name="myorder_ordertime">下单时间：</string>
    <string name="myorder_servicetime">服务时间：</string>
    <string name="myorder_carinfo">车&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="myorder_type">类别：</string>
    <string name="myorder_plateno">车牌：</string>
    <string name="myorder_carLocation">汽车位置：</string>
    <string name="myorder_cancel">取消订单</string>
    <string name="myorder_delete">删除订单</string>
    <string name="myorder_pay">支付订单</string>
    <string name="myorder_comment">评价订单</string>
    <string name="myorder_canceled">已取消</string>
    <string name="myorder_deliverying">派单中</string>

    <string name="no_more_data">暂无更多数据</string>
    <string name="sign_yuan">¥</string>
    <string name="unit_yuan">元</string>
    <string name="money_sum">合计：</string>
    <!--订单详情-->
    <string name="order_info_service">订单内容</string>
    <string name="order_info_total">合计</string>
    <string name="order_info_couponAmout">优惠券抵扣</string>
    <string name="order_info_payAmount">实际支付</string>
    <string name="order_info_employee">操作信息</string>
    <string name="order_info_employeeName">技师名称：</string>
    <string name="order_info_employeeTel">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="order_info_pic">照片</string>
    <string name="order_info_before">洗车前</string>
    <string name="order_info_after">洗车后</string>
    <string name="order_info_suggest">建议内容：</string>
    <string name="order_info_express">建议缘由</string>
    <string name="order_info_nocomment">未评价</string>
    <string name="order_info_commented">我的评价</string>
    <string name="order_info_tocomment">添加评价</string>
    <string name="order_info_topay">去支付</string>
    <string name="order_info_details">订单信息</string>
    <string name="order_info_serviceTime">服务时间：</string>
    <string name="order_info_no">订单编号：</string>
    <string name="order_info_time">订单时间：</string>
    <string name="order_info_payType">支付方式：</string>
    <string name="order_info_driver">车主名称：</string>
    <string name="order_info_car">车辆信息：</string>
    <string name="order_info_carplateno">车&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;牌：</string>
    <string name="order_info_carType">车辆类别：</string>
    <string name="order_info_carloc">车辆位置：</string>
    <string name="order_info_title">订单详情</string>
    <string name="order_info_recommandbz">备注：</string>
    <string name="order_tel_error">联系信息有误</string>

    <!--评价订单-->
    <string name="comment_title">评价订单</string>
    <string name="comment_label">评价</string>
    <string name="comment_hint">请在此输入您的宝贵意见，谢谢~</string>
    <string name="comment_submit">提交</string>
    <string name="comment_content_long">请输入500字以内的评价</string>
    <string name="comment_succeed">订单评论成功</string>
    <string name="after_comment">已评价</string>
    <!--意见反馈-->
    <string name="feeedback_title">意见反馈</string>
    <string name="feeedback_hint">请在此输入您的宝贵意见，谢谢~</string>
    <string name="feedback_content_long">请输入400字以内的意见</string>
    <string name="opeartion_succeed">反馈成功</string>

    <!--我的礼券-->
    <string name="mycoupons_title">我的礼券</string>
    <string name="mycoupons_change_lable">兑换优惠码</string>
    <string name="mycoupons_coupon_unit">张</string>
    <string name="mycoupons_points_lable">积分</string>
    <string name="mycoupons_points_unit">分</string>
    <string name="mycoupons_coupon_lable">优惠券</string>
    <string name="mycoupons_used">该优惠券已使用</string>
    <string name="mycoupons_dated">该优惠券已过期</string>
    <string name="mycoupons_dating">该优惠券未到使用期</string>

    <!--兑换优惠码-->
    <string name="input_coupon_submit">兑换</string>
    <string name="exchange_succed">兑换成功</string>
    <string name="input_coupon_title">优惠码兑换</string>


    <!-- <string name="order_info_commented">操作信息</string>-->
    <string name="address_select">选择车辆位置</string>
    <string name="car_set">现在设置吧</string>
    <string name="car_set_tip">您还没设置车辆哦</string>
    <string name="coupons_use">抵扣￥</string>

    <!--服务城市-->
    <string name="service_city_more">我们正在努力为更多的城市提供服务</string>
    <string name="service_city_title">服务城市</string>
</resources>
